--- a/style.css
+++ b/style.css
@@ -42,6 +42,7 @@ body {
   animation-iteration-count: infinite;
   animation-direction: alternate;
   animation-timing-function: linear;
+  
 }
 
 @keyframes motion {
@@ -122,6 +123,7 @@ ul li span:hover {
   backdrop-filter: blur(25px);
   width: 20rem;
   position: relative;
+  
 }
 
 #history :nth-child(1) {
@@ -138,7 +140,7 @@ ul li span:hover {
   text-align: center;
   padding-top: 1rem;
   margin-top: 1rem;
-  color: white;
+  color: black;
 }
 
 .clear {
